[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SeeingThroughFog"
version = "1.0.0"
authors = [
  { name="Nils Morbitzer" },
]
description = "The SDK of the SeeingThroughFog"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "opencv-python",
    "cycler",
    "future",
    "iso8601",
    "kiwisolver",
    "pyparsing",
    "pyquaternion",
    "pyserial",
    "python-dateutil",
    "pyyaml",
    "serial"
]

[project.urls]
"Homepage" = "https://github.com/princeton-computational-imaging/SeeingThroughFog"
"Bug Tracker" = "https://github.com/princeton-computational-imaging/SeeingThroughFog/issues"
